--- a/react/package.json
+++ b/react/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^4.0.2",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.2",
+    "@devexpress/dx-react-core": "^4.0.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@testing-library/jest-dom": "^5.11.9",
