--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.21.1",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.4",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
